Corrected save/reset button margin size issue on firefox, and added rules to help keep sizing in integration

--- a/assets/styles/components/filters/filter_reset.css
+++ b/assets/styles/components/filters/filter_reset.css
@@ -1,7 +1,9 @@
 filter_reset {
    display: inline-block;
 
-   margin: 0em 1em;
+   vertical-align: top;
+
+   margin: 0em 0.9em;
 }
 
 filter_reset input {
@@ -9,5 +11,5 @@ filter_reset input {
 
    width: 100%;
 
-   /*border-radius: 0.25em;*/
+   font-size: 0.8em;
 }
