--- a/assets/styles/components/filters/filter_save_results.css
+++ b/assets/styles/components/filters/filter_save_results.css
@@ -1,7 +1,13 @@
 filter_save_results {
    display: inline-block;
 
-   margin: 0em 1em;
+   vertical-align: top;
+   
+   margin: 0em 0.9em;
+}
+
+filter_save_results > input {
+   font-size: 0.8em;
 }
 
 filter_save_results .save-dialog {
